@@ -4,10 +4,8 @@
 
 package com.openjiuwen.harness.tools.browser_move.utils;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
-
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -16,55 +14,51 @@ import java.util.Set;
 /**
  * Shared parsing helpers for runtime/controller responses.
  *
- * <p>Mirrors Python's {@code openjiuwen.harness.tools.browser_move.utils.parsing}.
+ * <p>Mirrors Python's
+ * {@code openjiuwen/harness/tools/browser_move/utils/parsing.py}.
  */
 public final class ParsingUtils {
 
     private static final ObjectMapper OBJECT_MAPPER = new ObjectMapper();
-    private static final Set<String> UNSUPPORTED_SCHEMA_KEYS = Collections.unmodifiableSet(
-            new HashSet<>(java.util.Arrays.asList("$schema", "$id", "$defs", "definitions", "$comment", "$anchor", "$vocabulary"))
+    private static final Set<String> UNSUPPORTED_SCHEMA_KEYS = Set.of(
+            "$schema", "$id", "$defs", "definitions", "$comment", "$anchor", "$vocabulary"
     );
 
     private ParsingUtils() {
     }
 
     public static Object sanitizeJsonSchema(Object schema) {
-        if (!(schema instanceof Map)) {
+        if (!(schema instanceof Map<?, ?> rawMap)) {
             return schema;
         }
-        Map<String, Object> schemaMap = new LinkedHashMap<>((Map<String, Object>) schema);
-        for (String kw : java.util.Arrays.asList("anyOf", "oneOf")) {
-            Object variantsObj = schemaMap.get(kw);
-            if (variantsObj instanceof List) {
-                List<?> variants = (List<?>) variantsObj;
-                if (variants.size() == 2) {
-                    List<Object> nonNull = new java.util.ArrayList<>();
-                    int nullCount = 0;
-                    for (Object v : variants) {
-                        boolean isNull = v instanceof Map && "null".equals(((Map<?, ?>) v).get("type"));
-                        if (!isNull && !v.equals(Map.of("type", "null"))) {
-                            nonNull.add(v);
-                        } else {
-                            nullCount++;
-                        }
-                    }
-                    if (nullCount == 1 && nonNull.size() == 1) {
-                        Map<String, Object> merged = new LinkedHashMap<>(schemaMap);
-                        merged.remove(kw);
-                        if (nonNull.get(0) instanceof Map) {
-                            @SuppressWarnings("unchecked")
-                            Map<String, Object> subMap = (Map<String, Object>) nonNull.get(0);
-                            merged.putAll(subMap);
-                        }
-                        schemaMap = merged;
-                        break;
-                    }
+
+        Map<String, Object> working = new LinkedHashMap<>();
+        for (Map.Entry<?, ?> entry : rawMap.entrySet()) {
+            if (entry.getKey() instanceof String key) {
+                working.put(key, entry.getValue());
+            }
+        }
+
+        for (String keyword : List.of("anyOf", "oneOf")) {
+            Object variants = working.get(keyword);
+            if (variants instanceof List<?> variantList && variantList.size() == 2) {
+                List<Map<String, Object>> nonNull = variantList.stream()
+                        .filter(Map.class::isInstance)
+                        .map(item -> castMap((Map<?, ?>) item))
+                        .filter(item -> !"null".equals(item.get("type")))
+                        .toList();
+                long nullCount = variantList.size() - nonNull.size();
+                if (nullCount == 1 && nonNull.size() == 1) {
+                    Map<String, Object> merged = new LinkedHashMap<>(working);
+                    merged.remove(keyword);
+                    merged.putAll(nonNull.getFirst());
+                    working = merged;
                 }
             }
         }
 
         Map<String, Object> cleaned = new LinkedHashMap<>();
-        for (Map.Entry<String, Object> entry : schemaMap.entrySet()) {
+        for (Map.Entry<String, Object> entry : working.entrySet()) {
             if (!UNSUPPORTED_SCHEMA_KEYS.contains(entry.getKey())) {
                 cleaned.put(entry.getKey(), entry.getValue());
             }
@@ -74,29 +68,25 @@ public final class ParsingUtils {
             cleaned.put("type", "object");
         }
 
-        if (cleaned.containsKey("properties") && cleaned.get("properties") instanceof Map) {
-            Map<String, Object> props = new LinkedHashMap<>((Map<String, Object>) cleaned.get("properties"));
-            Map<String, Object> sanitizedProps = new LinkedHashMap<>();
-            for (Map.Entry<String, Object> entry : props.entrySet()) {
-                sanitizedProps.put(entry.getKey(), sanitizeJsonSchema(entry.getValue()));
-            }
-            cleaned.put("properties", sanitizedProps);
-        }
-
-        for (String kw : java.util.Arrays.asList("items", "additionalProperties", "not")) {
-            if (cleaned.containsKey(kw)) {
-                cleaned.put(kw, sanitizeJsonSchema(cleaned.get(kw)));
-            }
-        }
-
-        for (String kw : java.util.Arrays.asList("anyOf", "oneOf", "allOf")) {
-            if (cleaned.containsKey(kw) && cleaned.get(kw) instanceof List) {
-                List<?> variants = (List<?>) cleaned.get(kw);
-                List<Object> sanitized = new java.util.ArrayList<>();
-                for (Object v : variants) {
-                    sanitized.add(sanitizeJsonSchema(v));
+        if (cleaned.get("properties") instanceof Map<?, ?> properties) {
+            Map<String, Object> nested = new LinkedHashMap<>();
+            for (Map.Entry<?, ?> entry : properties.entrySet()) {
+                if (entry.getKey() instanceof String key) {
+                    nested.put(key, sanitizeJsonSchema(entry.getValue()));
                 }
-                cleaned.put(kw, sanitized);
+            }
+            cleaned.put("properties", nested);
+        }
+
+        for (String keyword : List.of("items", "additionalProperties", "not")) {
+            if (cleaned.containsKey(keyword)) {
+                cleaned.put(keyword, sanitizeJsonSchema(cleaned.get(keyword)));
+            }
+        }
+
+        for (String keyword : List.of("anyOf", "oneOf", "allOf")) {
+            if (cleaned.get(keyword) instanceof List<?> items) {
+                cleaned.put(keyword, items.stream().map(ParsingUtils::sanitizeJsonSchema).toList());
             }
         }
 
@@ -104,16 +94,16 @@ public final class ParsingUtils {
     }
 
     public static Map<String, Object> extractJsonObject(Object text) {
-        if (text instanceof Map) {
-            return new LinkedHashMap<>((Map<String, Object>) text);
+        if (text instanceof Map<?, ?> rawMap) {
+            return castMap(rawMap);
         }
         if (text == null) {
-            return Collections.emptyMap();
+            return Map.of();
         }
 
         String raw = String.valueOf(text).trim();
         if (raw.isEmpty()) {
-            return Collections.emptyMap();
+            return Map.of();
         }
 
         String markerResult = "### Result";
@@ -127,32 +117,24 @@ public final class ParsingUtils {
         }
 
         for (int i = 0; i < 2; i++) {
-            try {
-                Object parsed = OBJECT_MAPPER.readValue(raw, Object.class);
-                if (parsed instanceof Map) {
-                    return new LinkedHashMap<>((Map<String, Object>) parsed);
-                }
-                if (parsed instanceof String) {
-                    raw = ((String) parsed).trim();
-                    continue;
-                }
-                break;
-            } catch (Exception ignored) {
-                break;
+            Object parsed = tryParse(raw);
+            if (parsed instanceof Map<?, ?> parsedMap) {
+                return castMap(parsedMap);
             }
+            if (parsed instanceof String parsedString) {
+                raw = parsedString.trim();
+                continue;
+            }
+            break;
         }
 
         if (raw.contains("```json")) {
             int start = raw.indexOf("```json") + "```json".length();
             int end = raw.indexOf("```", start);
             if (end > start) {
-                String block = raw.substring(start, end).trim();
-                try {
-                    Object parsed = OBJECT_MAPPER.readValue(block, Object.class);
-                    if (parsed instanceof Map) {
-                        return new LinkedHashMap<>((Map<String, Object>) parsed);
-                    }
-                } catch (Exception ignored) {
+                Object parsed = tryParse(raw.substring(start, end).trim());
+                if (parsed instanceof Map<?, ?> parsedMap) {
+                    return castMap(parsedMap);
                 }
             }
         }
@@ -160,16 +142,30 @@ public final class ParsingUtils {
         int first = raw.indexOf('{');
         int last = raw.lastIndexOf('}');
         if (first >= 0 && last > first) {
-            String snippet = raw.substring(first, last + 1);
-            try {
-                Object parsed = OBJECT_MAPPER.readValue(snippet, Object.class);
-                if (parsed instanceof Map) {
-                    return new LinkedHashMap<>((Map<String, Object>) parsed);
-                }
-            } catch (Exception ignored) {
+            Object parsed = tryParse(raw.substring(first, last + 1));
+            if (parsed instanceof Map<?, ?> parsedMap) {
+                return castMap(parsedMap);
             }
         }
 
-        return Collections.emptyMap();
+        return Map.of();
+    }
+
+    private static Object tryParse(String raw) {
+        try {
+            return OBJECT_MAPPER.readValue(raw, Object.class);
+        } catch (JsonProcessingException ignored) {
+            return null;
+        }
+    }
+
+    private static Map<String, Object> castMap(Map<?, ?> rawMap) {
+        Map<String, Object> casted = new LinkedHashMap<>();
+        for (Map.Entry<?, ?> entry : rawMap.entrySet()) {
+            if (entry.getKey() instanceof String key) {
+                casted.put(key, entry.getValue());
+            }
+        }
+        return casted;
     }
 }
